NAK-939 SBD APIs code
