# src/ska_oso_ptt_services/rest/openapi/ptt-openapi-v1.yaml
@@ -19,7 +19,7 @@ paths:
         precedence of user > created_on > modified_on. Also requests without
         parameters will return an error rather than returning all objects. This behaviour will
         change in the future..
-      operationId: ska_oso_ptt_services.rest.api.resources.get_sbds
+      operationId: ska_oso_ptt_services.rest.api.resources.get_sbds_with_status
       parameters:
         - $ref: '#/components/parameters/user'
         - $ref: '#/components/parameters/MatchType'
@@ -41,7 +41,90 @@ paths:
           $ref: '#/components/responses/BadRequest'
         "500":
           $ref: '#/components/responses/InternalServerError'
-  
+  /sbds/{sbd_id}:
+    parameters:
+      - name: sbd_id
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+    get:
+      summary: Get SBDefinition by identifier
+      description: |
+        Retrieves the SBDefinition with the given identifier from the
+        underlying data store, if available
+      operationId: ska_oso_ptt_services.rest.api.resources.get_sbd_with_status
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+        #                $ref: './oso-components-openapi-v1.yaml#/components/schemas/SBDefinition'
+        "404":
+          $ref: '#/components/responses/NotFound'
+        "500":
+          $ref: '#/components/responses/InternalServerError'
+    put:
+      summary: Updates an SBDefinition by identifier
+      description: |
+        Updates the SBDefinition with the given identifier
+        in the underlying data store, creating a new version.
+        If the identifier does not exist in the data store, a not found error will be returned.
+      operationId: ska_oso_ptt_services.rest.api.resources.put_sbd_history
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+        #              $ref: './oso-components-openapi-v1.yaml#/components/schemas/SBDefinition'
+        required: true
+      responses:
+        "200":
+          description: OK, the SBDefinition was created or updated
+          content:
+            application/json:
+              schema:
+                type: object
+        #                $ref: './oso-components-openapi-v1.yaml#/components/schemas/SBDefinition'
+        "400":
+          $ref: '#/components/responses/BadRequest'
+        "404":
+          $ref: '#/components/responses/NotFound'
+        "422":
+          $ref: '#/components/responses/UnprocessableEntity'
+        "500":
+          $ref: '#/components/responses/InternalServerError'
+  /status/history/sbds:
+    get:
+      summary: Get SBDefinition status history by the query parameter.
+      description: |
+        Retrieves the SBDefinitions status history which match the query parameters.
+        Currently only two single query field is permitted, eg entity_id and version, 
+        extra parameters passed to the request will be ignored.
+        If version parameter is not passed then the api retrieves the SBDefinitions status history
+        for the latest available SBDefinitions  version.Also requests without
+        parameters will return an error rather than returning all objects.
+      operationId: ska_oso_ptt_services.rest.api.resources.get_sbd_status_history
+      parameters:
+        - $ref: '#/components/parameters/entity_id'
+        - $ref: '#/components/parameters/version'
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+        "400":
+          $ref: '#/components/responses/BadRequest'
+        "500":
+          $ref: '#/components/responses/InternalServerError'
 
 components:
   parameters:
@@ -56,7 +139,7 @@ components:
       name: match_type
       schema:
         type: string
-        enum: [ equals, starts_with, contains]
+        enum: [ equals, starts_with, contains ]
         default: equals
       required: false
     createdBefore:
@@ -93,6 +176,14 @@ components:
       schema:
         type: string
       required: false
+    version:
+      in: query
+      name: version
+      schema:
+        type: integer
+      required: false
+      example: 1
+  
   responses:
     NotFound:
       description: Not Found
